# donglify.cpp

./: dev.sh  donglify.cpp  meson.build  quick_run.sh
.cache/clangd/index/: ansi.hpp.6FE90DA33F95F3C9.idx  donglify.cpp.631A2A241A833615.idx  execute.cpp.37BD74067E5865F5.idx  execute.hpp.6A5069441BFC0FCE.idx
include/donglify/: ansi.hpp  disk.hpp  execute.hpp  state.hpp
include/donglify/cmds/: initialize_partitions.hpp
src/: disk.cpp  donglify.cpp  execute.cpp  state.cpp
src/cmds/: initialize_partitions.cpp
